--- a/UploadSalesApplication/UploadSalesApplication.csproj
+++ b/UploadSalesApplication/UploadSalesApplication.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SBSControl.cs" />
+    <Compile Include="test.cs" />
     <Compile Include="UploadSalesControl.cs" />
     <Compile Include="UploadSalesInterface.cs" />
     <EmbeddedResource Include="Form1.resx">
