--- a/UploadSalesApplication/UploadSalesApplication.csproj
+++ b/UploadSalesApplication/UploadSalesApplication.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SBSControl.cs" />
     <Compile Include="test.cs" />
+    <Compile Include="testbranch.cs" />
     <Compile Include="UploadSalesControl.cs" />
     <Compile Include="UploadSalesInterface.cs" />
     <EmbeddedResource Include="Form1.resx">
